@@ -1,4 +1,0 @@
-<key_list>
- <key>SearchableText</key>
- <key>full_text.SearchableText</key>
-</key_list>
