@@ -1,5 +1,0 @@
-<catalog_method>
- <item key="sql_catalog_object_list" type="int">
-  <value>1</value>
- </item>
-</catalog_method>
