@@ -3,7 +3,6 @@
  <key>catalog</key>
  <key>category</key>
  <key>delivery</key>
- <key>full_text</key>
  <key>inventory</key>
  <key>inventory_stock</key>
  <key>item</key>
