@@ -1,2 +1,0 @@
-SearchableText
-full_text.SearchableText
