@@ -2,7 +2,6 @@ catalog
 category
 alarm
 delivery
-full_text
 inventory
 inventory_stock
 item
